--- a/BuyVegetablesTreasure/FS/Main/我的/Root/View/FSMeBottomView.xib
+++ b/BuyVegetablesTreasure/FS/Main/我的/Root/View/FSMeBottomView.xib
@@ -39,26 +39,26 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FS我的订单" id="Ban-FV-AWk" userLabel="订单Img">
-                    <rect key="frame" x="43" y="15" width="34" height="45"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="FS我的订单" id="Ban-FV-AWk" userLabel="订单Img">
+                    <rect key="frame" x="44" y="17" width="31" height="39"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我的订单" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="og0-8N-CfM">
-                    <rect key="frame" x="0.0" y="67" width="124" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="我的订单" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="og0-8N-CfM">
+                    <rect key="frame" x="0.0" y="67" width="119" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="WgD-7A-0Zv" userLabel="订单Button">
-                    <rect key="frame" x="0.0" y="0.0" width="123" height="101"/>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="WgD-7A-0Zv" userLabel="订单Button">
+                    <rect key="frame" x="0.0" y="0.0" width="123" height="100"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                     <connections>
                         <action selector="myDingDanClick:" destination="g0n-RB-0Mj" eventType="touchUpInside" id="VTd-fV-Xey"/>
                     </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FS我的优惠券" id="7z5-ld-c3D" userLabel="优惠券Img">
-                    <rect key="frame" x="165" y="22" width="42" height="27"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="FS我的优惠券" id="7z5-ld-c3D" userLabel="优惠券Img">
+                    <rect key="frame" x="165" y="24" width="40" height="27"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我的优惠券" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="RRE-CG-1HP">
@@ -75,8 +75,8 @@
                         <action selector="myYouHuiQuanClick:" destination="g0n-RB-0Mj" eventType="touchUpInside" id="ygE-oU-Xh1"/>
                     </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FS我的收藏" id="tlV-UI-6FU" userLabel="收藏Img">
-                    <rect key="frame" x="290" y="16" width="40" height="40"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="FS我的收藏" id="tlV-UI-6FU" userLabel="收藏Img">
+                    <rect key="frame" x="290" y="21" width="38" height="35"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我的收藏" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Kxw-Bw-jaw">
@@ -93,12 +93,12 @@
                         <action selector="myShouCangClick:" destination="g0n-RB-0Mj" eventType="touchUpInside" id="8Vs-IW-Lc0"/>
                     </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FS拼团" id="CFa-wA-OSg" userLabel="拼团Img">
-                    <rect key="frame" x="42" y="115" width="36" height="40"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="FS拼团" id="CFa-wA-OSg" userLabel="拼团Img">
+                    <rect key="frame" x="40" y="118" width="37" height="37"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我的拼团" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EmA-in-ah4">
-                    <rect key="frame" x="0.0" y="167" width="124" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="我的拼团" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EmA-in-ah4">
+                    <rect key="frame" x="0.0" y="167" width="119" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="textColor"/>
@@ -111,8 +111,8 @@
                         <action selector="myPingTuanClick:" destination="g0n-RB-0Mj" eventType="touchUpInside" id="mA9-sk-2nm"/>
                     </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FS地址管理" id="dh7-5c-B8E" userLabel="地址Img">
-                    <rect key="frame" x="167" y="115" width="32" height="42"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="FS地址管理" id="dh7-5c-B8E" userLabel="地址Img">
+                    <rect key="frame" x="170" y="119" width="27" height="36"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="地址管理" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nyA-WX-iAC">
@@ -132,7 +132,7 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="64" y="377"/>
+            <point key="canvasLocation" x="0.5" y="290"/>
         </view>
     </objects>
     <resources>
