--- a/BuyVegetablesTreasure/FS/Main/我的/ShowBigImage/View/FSShowImageCVCell.xib
+++ b/BuyVegetablesTreasure/FS/Main/我的/ShowBigImage/View/FSShowImageCVCell.xib
@@ -18,16 +18,22 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="104x110" translatesAutoresizingMaskIntoConstraints="NO" id="D3n-ub-TK1">
-                        <rect key="frame" x="0.0" y="0.0" width="195" height="210"/>
+                        <rect key="frame" x="15" y="0.0" width="165" height="210"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eW8-BR-j97">
+                        <rect key="frame" x="116" y="20" width="46" height="30"/>
+                        <state key="normal" title="Button"/>
+                    </button>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="D3n-ub-TK1" secondAttribute="trailing" id="01g-4w-uQw"/>
+                <constraint firstAttribute="trailing" secondItem="D3n-ub-TK1" secondAttribute="trailing" constant="15" id="01g-4w-uQw"/>
                 <constraint firstItem="D3n-ub-TK1" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ZWi-9d-Y1S"/>
                 <constraint firstAttribute="bottom" secondItem="D3n-ub-TK1" secondAttribute="bottom" id="bOb-wp-Agg"/>
-                <constraint firstItem="D3n-ub-TK1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="d7p-Lz-4UI"/>
+                <constraint firstItem="D3n-ub-TK1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15" id="d7p-Lz-4UI"/>
+                <constraint firstItem="eW8-BR-j97" firstAttribute="top" secondItem="D3n-ub-TK1" secondAttribute="top" constant="20" id="j97-ww-uf2"/>
+                <constraint firstItem="eW8-BR-j97" firstAttribute="trailing" secondItem="D3n-ub-TK1" secondAttribute="trailing" constant="-18" id="ygQ-SO-CsW"/>
             </constraints>
             <size key="customSize" width="195" height="210"/>
             <point key="canvasLocation" x="139.5" y="159"/>
