--- a/BuyVegetablesTreasure/FS/Main/我的/ShowBigImage/View/FSShowImageCVCell.xib
+++ b/BuyVegetablesTreasure/FS/Main/我的/ShowBigImage/View/FSShowImageCVCell.xib
@@ -11,35 +11,49 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="FSShowImageCVCell">
-            <rect key="frame" x="0.0" y="0.0" width="195" height="210"/>
+            <rect key="frame" x="0.0" y="0.0" width="195" height="354"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="195" height="210"/>
+                <rect key="frame" x="0.0" y="0.0" width="195" height="354"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="104x110" translatesAutoresizingMaskIntoConstraints="NO" id="D3n-ub-TK1">
-                        <rect key="frame" x="15" y="0.0" width="165" height="210"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D3n-ub-TK1">
+                        <rect key="frame" x="37" y="27" width="121" height="300"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="300" id="scj-Jn-TLV"/>
+                        </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eW8-BR-j97">
-                        <rect key="frame" x="116" y="20" width="46" height="30"/>
-                        <state key="normal" title="Button"/>
+                        <rect key="frame" x="100" y="47" width="48" height="48"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="48" id="dh4-9U-DzD"/>
+                            <constraint firstAttribute="height" constant="48" id="nne-9R-rya"/>
+                        </constraints>
+                        <state key="normal" backgroundImage="FSShare"/>
+                        <connections>
+                            <action selector="shareButtonAction:" destination="gTV-IL-0wX" eventType="touchUpInside" id="D5t-0J-Aaj"/>
+                        </connections>
                     </button>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="D3n-ub-TK1" secondAttribute="trailing" constant="15" id="01g-4w-uQw"/>
-                <constraint firstItem="D3n-ub-TK1" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ZWi-9d-Y1S"/>
-                <constraint firstAttribute="bottom" secondItem="D3n-ub-TK1" secondAttribute="bottom" id="bOb-wp-Agg"/>
-                <constraint firstItem="D3n-ub-TK1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15" id="d7p-Lz-4UI"/>
-                <constraint firstItem="eW8-BR-j97" firstAttribute="top" secondItem="D3n-ub-TK1" secondAttribute="top" constant="20" id="j97-ww-uf2"/>
-                <constraint firstItem="eW8-BR-j97" firstAttribute="trailing" secondItem="D3n-ub-TK1" secondAttribute="trailing" constant="-18" id="ygQ-SO-CsW"/>
+                <constraint firstAttribute="trailing" secondItem="D3n-ub-TK1" secondAttribute="trailing" constant="37" id="01g-4w-uQw"/>
+                <constraint firstItem="eW8-BR-j97" firstAttribute="top" secondItem="D3n-ub-TK1" secondAttribute="top" constant="20" id="Cz5-WI-34e"/>
+                <constraint firstItem="D3n-ub-TK1" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="Mfq-53-m5b"/>
+                <constraint firstItem="D3n-ub-TK1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="37" id="d7p-Lz-4UI"/>
+                <constraint firstItem="eW8-BR-j97" firstAttribute="trailing" secondItem="D3n-ub-TK1" secondAttribute="trailing" constant="-10" id="nV7-GY-N1X"/>
             </constraints>
-            <size key="customSize" width="195" height="210"/>
-            <point key="canvasLocation" x="139.5" y="159"/>
+            <size key="customSize" width="195" height="354"/>
+            <connections>
+                <outlet property="heightConstraint" destination="scj-Jn-TLV" id="gYs-Sm-eNW"/>
+                <outlet property="iconImageView" destination="D3n-ub-TK1" id="Ni2-fp-AcB"/>
+                <outlet property="shareButton" destination="eW8-BR-j97" id="t0S-9U-cAc"/>
+            </connections>
+            <point key="canvasLocation" x="139.5" y="87"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="104x110" width="104" height="110"/>
+        <image name="FSShare" width="48" height="48"/>
     </resources>
 </document>
